--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -18,6 +18,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^20.11.17",
     "axios": "^1.6.7",
+    "backend": "file:",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
