--- a/notification/package.json
+++ b/notification/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "nodemon": "^3.0.3",
+    "notification": "file:",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "ts-node-dev": "^2.0.0",
