--- a/authService/package.json
+++ b/authService/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "backend": "file:",
         "bcrypt": "^5.0.1",
+        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
