--- a/bill-service/package.json
+++ b/bill-service/package.json
@@ -4,13 +4,12 @@
     "description": "Billing service for STL",
     "main": "src/index.js",
     "scripts": {
-      "start": "node src/index.js"
+        "start": "node src/index.js"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^7.5.0",
-      "body-parser": "^1.20.2",
-      "dotenv": "^16.0.3"
+        "body-parser": "^1.20.2",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.2",
+        "mongoose": "^7.5.0"
     }
-  }
-  
+}
