feat: jwt validation added to bff

--- a/bff/src/main/resources/application.properties
+++ b/bff/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=sri-tel
 
 
 # Microservices URLs
-core.notification.service.url=http://localhost:4092/api/notifications
-core.billing.service.url=http://localhost:4093/api/billing
-core.payment.service.url=http://localhost:4094/api/payments
-core.customer.management.url=http://localhost:4095/api/customers
-core.chat.service.url=http://localhost:4096/api/chat
-core.auth.service.url=http://localhost:4097/api/auth
-core.image.upload.service.url=http://localhost:4098/api/images
-core.value.added.service.url=http://localhost:4099/api/value-added
+core.notification.service.url=${CORE_NOTIFICATION_SERVICE_URL}
+core.billing.service.url=${CORE_BILLING_SERVICE_URL}
+core.payment.service.url=${CORE_PAYMENT_SERVICE_URL}
+core.customer.service.url=${CORE_CUSTOMER_SERVICE_URL}
+core.chat.service.url=${CORE_CHAT_SERVICE_URL}
+core.auth.service.url=${CORE_AUTH_SERVICE_URL}
+core.upload.service.url=${CORE_UPLOAD_SERVICE_URL}
+core.value.added.service.url=${CORE_VALUE_ADDED_SERVICE_URL}
 
-server.port=4091
+server.port=${SERVER_PORT}
