--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -171,30 +171,28 @@ services:
     restart: unless-stopped
 
 
-
-
-
-
-
   bff:
     container_name: st_bff
     build:
       context: ./bff
       dockerfile: Dockerfile
-      # dockerfile: gradle.Dockerfile
     ports:
       - "4900:4091"
     volumes:
       - ./bff/src:/app/src  # Mount source code for live updates
       - ./bff/target:/app/target  # Mount target directory to persist compiled code
-    # environment:
-    #   - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
-
-
+    environment:
+      # - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+      - CORE_NOTIFICATION_SERVICE_URL=http://localhost:4902/api/notification
+      - CORE_BILLING_SERVICE_URL=http://localhost:4903/api/billing
+      - CORE_PAYMENT_SERVICE_URL=http://localhost:4904/api/payment
+      - CORE_CUSTOMER_SERVICE_URL=http://localhost:4905/api/customer
+      - CORE_CHAT_SERVICE_URL=http://localhost:4906/api/chat
+      - CORE_AUTH_SERVICE_URL=http://localhost:4907/api/auth
+      - CORE_UPLOAD_SERVICE_URL=http://localhost:4908/api/upload
+      - CORE_VALUE_ADDED_SERVICE_URL=http://localhost:4909/api/value-added
+      - SERVER_PORT=4901
     command: mvn spring-boot:run
-    # command: "./gradlew bootRun --continuous"
-    # command: "./gradlew bootRun --continuous -Dorg.gradle.daemon=false -Dorg.gradle.unsafe.polling=true"
-
     networks:
       - st_sritel-network
 
