token decoded and added to header by bff. Secret key added to docke-compose file

--- a/bff/src/main/resources/application.properties
+++ b/bff/src/main/resources/application.properties
@@ -10,5 +10,6 @@ core.chat.service.url=${CORE_CHAT_SERVICE_URL}
 core.auth.service.url=${CORE_AUTH_SERVICE_URL}
 core.upload.service.url=${CORE_UPLOAD_SERVICE_URL}
 core.value.added.service.url=${CORE_VALUE_ADDED_SERVICE_URL}
+jwt.secret.key=${JWT_SECRET_KEY}
 
 server.port=${SERVER_PORT}
