--- a/bill-service/package.json
+++ b/bill-service/package.json
@@ -7,9 +7,11 @@
         "start": "node src/index.js"
     },
     "dependencies": {
+        "axios": "^1.7.7",
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
-        "mongoose": "^7.5.0"
+        "mongoose": "^7.5.0",
+        "node-cron": "^3.0.3"
     }
 }
