--- a/bill-service/package.json
+++ b/bill-service/package.json
@@ -4,7 +4,9 @@
     "description": "Billing service for STL",
     "main": "src/index.js",
     "scripts": {
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
+
     },
     "dependencies": {
         "axios": "^1.7.7",
@@ -13,6 +15,8 @@
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "mongoose": "^7.5.0",
-        "node-cron": "^3.0.3"
+        "node-cron": "^3.0.3",
+        "nodemon": "^2.0.15"
+        
     }
 }
