--- a/authService/package.json
+++ b/authService/package.json
@@ -10,6 +10,7 @@
     "author": "Kasun Udara",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.7.7",
         "backend": "file:",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.3",
