--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -294,7 +294,6 @@ services:
     networks:
       - st_sritel-network
 
-  # Auth Service DB
   mongodb-1:
     container_name: st_mongodb-1
     hostname: mongodb-1
@@ -303,6 +302,8 @@ services:
       - "4941:27017"
     networks:
       - st_sritel-network
+    volumes:
+      - mongodb_data_1:/data/db
 
   # Billing Service DB
   mongodb-2:
@@ -313,17 +314,20 @@ services:
       - "4942:27017"
     networks:
       - st_sritel-network
+    volumes:
+      - mongodb_data_2:/data/db
 
-
-# Chat Service MongoDB
+  # Chat Service MongoDB
   mongodb-chat:
     container_name: st_mongodb_chat
     hostname: mongodb-chat
     image: mongo:latest
     ports:
-      - "4944:27017"  # Mapping MongoDB port for chat service
+      - "4944:27017"
     networks:
       - st_sritel-network
+    volumes:
+      - mongodb_chat_data:/data/db
 
   mongodb-3:
     container_name: st_mongodb-3
@@ -333,6 +337,8 @@ services:
       - "4943:27017"
     networks:
       - st_sritel-network
+    volumes:
+      - mongodb_data_3:/data/db
 
   mongodb-4:
     container_name: st_mongodb-4
@@ -342,6 +348,8 @@ services:
       - "4946:27017"
     networks:
       - st_sritel-network
+    volumes:
+      - mongodb_data_4:/data/db
 
   mongodb-5:
     container_name: st_mongodb-5
@@ -351,6 +359,8 @@ services:
       - "4945:27017"
     networks:
       - st_sritel-network
+    volumes:
+      - mongodb_data_5:/data/db
 
   # Mail Service
   mail:
@@ -367,5 +377,12 @@ networks:
   st_sritel-network:
     driver: bridge
 
+
 volumes:
   st_upload:
+  mongodb_data_1:
+  mongodb_data_2:
+  mongodb_chat_data:
+  mongodb_data_3:
+  mongodb_data_4:
+  mongodb_data_5:
