--- a/bill-service/package.json
+++ b/bill-service/package.json
@@ -6,7 +6,6 @@
     "scripts": {
         "start": "node src/index.js",
         "dev": "nodemon src/index.js"
-
     },
     "dependencies": {
         "axios": "^1.7.7",
@@ -14,9 +13,9 @@
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.0",
         "node-cron": "^3.0.3",
         "nodemon": "^2.0.15"
-        
     }
 }
