--- a/bill-service/package.json
+++ b/bill-service/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "kafkajs": "^2.2.4",
         "mongoose": "^7.5.0",
         "node-cron": "^3.0.3",
         "nodemon": "^2.0.15"
