--- a/chatService/package.json
+++ b/chatService/package.json
@@ -13,6 +13,7 @@
       "express": "^4.18.2",
       "socket.io": "^4.0.0",
       "mongoose": "^7.3.2",
+      "kafkajs": "^2.2.4",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "jsonwebtoken": "^9.0.1",
