--- a/valueAddedService/package.json
+++ b/valueAddedService/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.1",
+        "kafkajs": "^2.2.4",
         "mongoose": "^7.3.2",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.5",
